Fixing iPhone 5 spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -300,7 +300,7 @@
 		padding: 0 !important;
 	}
 
-	.time-logo-section, .time-logo-section h3 {
+	.time-logo-section, .time-logo-section h3, .jomo-logo {
 		margin-bottom: 2rem !important;
 	}
 
